# DSAT_GRAMMAR_GT

./: .gitignore  AI_MCP_AGENTIC_PLAN.md  AUTH.md  BENCHMARK.md  CB_ANSWERS_QUESTIONS_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  DOCKER_IMAGE_BUILD_PLAN.md  INGESTION.PRD  INGESTION_PRD.md  MATH_ADAPTATION_PLAN.md  OCR_INGESTION_PLAN.md  Reading_v1_rules_report.md  answer_obfuscation_report.md  generated_dsat_pt4_hard_4q_v1plusv3.md  grammar-app.html  kimi_4q_comparison_report.md  rules_agent_dsat_grammar_ingestion_generation.md  rules_agent_dsat_grammar_ingestion_generation_v2.md  rules_agent_dsat_grammar_ingestion_generation_v3.md  rules_agent_dsat_grammar_ingestion_generation_v7.md  rules_agent_dsat_grammar_ingestion_generetion_v5.md  rules_agent_dsat_grammar_ingestion_generetion_v6.md  rules_agent_dsat_grammar_ingestion_generetion_v7.md  rules_agent_dsat_reading_v1_1.md  rules_agent_dsat_reading_v2.md  rules_v1_v2_analysis_report.md  vdb_comparison.md
backend/: .env.example  .envrc  .gitignore  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/.claude/: settings.local.json
backend/app/: auth.py  config.py  database.py  logging_config.py  main.py  middleware.py
backend/docs/: README.md  api.md  architecture.md  configuration.md  llm.md  models.md  pipeline.md
backend/migrations/: env.py
backend/scripts/: manual_test.py
backend/tests/: conftest.py  test_admin_router.py  test_auth.py  test_backend_regressions.py  test_config.py  test_dashboard_router.py  test_generate_router.py  test_health.py  test_ingest_router.py  test_llm_providers.py  (+10 more)
(+186 files in other folders)
